--- a/template/src/client/index.html
+++ b/template/src/client/index.html
@@ -8,10 +8,10 @@
   <title>vue-upgrade4</title>
 
   <!-- build:remove -->
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="/css/bootstrap.css">
   <!-- /build -->
   <!-- build:css css/main.min.css -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
   <!-- /build -->
 </head>
 
@@ -23,7 +23,7 @@
 </div>
 
 <!-- build:js js/main.min.js -->
-<script src="main.js"></script>
+<script src="/dist/build.js"></script>
 <!-- /build -->
 
 </body>
